# OnStepAdapter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
docs/: HARDWARE_COMPATIBILITY.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  REQUIREMENTS.md  SDK.md  VALIDATION_EVIDENCE.md  onstep-adapter-readiness-plan.md  onstep-adapter-sdk-release-0.1.0.md  onstep-adapter-sdk-release-0.2.0.md  onstep-controller.md  onstep-field-test-plan.md
onstep_adapter/: __init__.py
onstep_adapter/tools/: __init__.py  axis_motion_smoke.py  coordinate_axis_smoke.py
smart_telescope/adapters/onstep/: mount.py
smart_telescope/ports/: mount.py
tests/unit/adapters/onstep/: fake_serial.py  test_axis_motion_smoke.py  test_coordinate_axis_smoke.py  test_onstep_axis_motion.py  test_onstep_client.py  test_onstep_firmware_proof.py  test_onstep_focuser.py  test_onstep_mount_contract.py  test_onstep_park_records.py  test_onstep_serial_bus.py  test_onstep_state_store.py  test_release_contract.py
